--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit==1.50.0
+gradio==3.43.0
+torch
+torchvision
+torchaudio
 transformers==4.57.0
 pillow==11.3.0
 requests==2.32.5
-numpy==2.3.3
