--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 gradio==3.43.0
-torch
-torchvision
-torchaudio
-transformers==4.57.0
-pillow==11.3.0
-requests==2.32.5
+torch==2.1.0
+torchvision==0.16.0
+torchaudio==2.1.0
+transformers==4.35.0
+pillow<11.0,>=8.0
